--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Game Mania</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="bootstraps/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <header>
-      <nav id="menu">
-        <a href="index.html">Home</a>
-        <a href="playstation5.html">Playstation 5</a>
-        <a href="xboxseries.html">Xbox Series</a>
-        <a href="wii.html">Wii</a>
-        <a href="pcgamer.html">PC Gamer</a>
-        <a href="lancamentos.html">Lançamentos</a>
+      <nav class="menu">
+        <a class="linkMenu" href="index.html">Home</a>
+        <a class="linkMenu" href="playstation5.html">Playstation 5</a>
+        <a class="linkMenu" href="xboxseries.html">Xbox Series</a>
+        <a class="linkMenu" href="wii.html">Wii</a>
+        <a class="linkMenu" href="pcgamer.html">PC Gamer</a>
+        <a class="linkMenu" href="lancamentos.html">Lançamentos</a>
+        <a class="linkMenu" href="login.html">Login</a>
       </nav>
       <h1>Game Mania</h1>
       <h2>O melhor do mundo GAMER</h2>
@@ -37,4 +44,5 @@
       </div>
     </footer>
   </body>
+  <script type="text/javascript" src="bootstraps/js/bootstrap.min.js"></script>
 </html>
